# zswap-cli

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  feature-request.md  feature-request.yml  question.md  question.yml
.github/workflows/: clang.yml  codeql.yml  fedora.yml  gcc.yml  iwyu.yml  linux.yml  ubuntu.yml
assets/: CMakeLists.txt  manpage.md  zswap-cli.service.in
assets/config/: zswap-cli.conf
assets/manpage/: zswap-cli.md.in
assets/metainfo/: zswap-cli.metainfo.xml.in
assets/shell-completion/: zswap-cli.bash.in
assets/systemd/: zswap-cli.service.in
cmake/: External.cmake  FindAppstreamUtil.cmake  FindBoost.cmake  FindCxxOpts.cmake  FindDoxygen.cmake  FindFileSystem.cmake  FindFileSystemHeader.cmake  FindFmt.cmake  FindFormat.cmake  FindFormatHeader.cmake  FindGlibcHeaders.cmake  FindKernelHeaders.cmake  FindPandoc.cmake  FindSemver.cmake  FindStdHeaders.cmake  InstallTargets.cmake  Settings.cmake  Variables.cmake
docs/: README.md  configuration-files.md  doxygen.md  environment-options.md  features.md  installation.md  using-application.md
packaging/assets/: Doxyfile.in  manpage.md  zswap-cli.conf  zswap-cli.service.in
packaging/fedora/: zswap-cli.spec
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/app/application/: application.cpp  application.hpp
src/application/: application.cpp  application.hpp
src/lib/: CMakeLists.txt
src/lib/appconstants/: appconstants.cpp.in  appconstants.hpp  appconstants.hpp.in
src/lib/cwrappers/: cwrappers.cpp  cwrappers.hpp
src/lib/ksysinfo/: ksysinfo.cpp  ksysinfo.hpp  ksystype.hpp
src/lib/ksysversion/: ksysversion.cpp  ksysversion.hpp
src/lib/zswapdebug/: zswapdebug.cpp  zswapdebug.hpp
src/lib/zswaphelper/: zswaphelper.cpp  zswaphelper.hpp
src/lib/zswapobject/: zswapobject.cpp  zswapobject.hpp
src/lib/zswapworker/: zswapworker.cpp  zswapworker.hpp
src/zswapobject/: zswapobject.cpp  zswapobject.hpp
src/zswapworker/: zswapworker.cpp  zswapworker.hpp
